--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Kutsche - Machine Learning Engineer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,39 +14,61 @@
             <h1>Simon Kutsche</h1>
             <p>Machine Learning Engineer</p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section id="about">
+    <nav>
+        <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#experience">EXPERIENCE</a></li>
+            <li><a href="#education">EDUCATION</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#resume">RESUME</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
+    </nav>
+
+    <section id="home">
         <div class="container">
-            <h2>About Me</h2>
-            <p>Hi, I'm Simon Kutsche, a passionate Machine Learning Engineer with expertise in...</p>
-            <!-- Add more about yourself -->
+            <h2>Home</h2>
+            <!-- Your home content goes here -->
         </div>
     </section>
 
-    <section id="projects">
+    <section id="experience">
         <div class="container">
-            <h2>Projects</h2>
-            <!-- Add details about your projects -->
+            <h2>Experience</h2>
+            <!-- Your experience content goes here -->
+        </div>
+    </section>
+
+    <section id="education">
+        <div class="container">
+            <h2>Education</h2>
+            <!-- Your education content goes here -->
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <!-- Your skills content goes here -->
+        </div>
+    </section>
+
+    <section id="resume">
+        <div class="container">
+            <h2>Resume</h2>
+            <!-- Your resume content goes here -->
         </div>
     </section>
 
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me via email at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+            <!-- Your contact content goes here -->
         </div>
     </section>
 
-
-    <!-- Content will go here -->
     <script src="script.js"></script>
 </body>
 
