--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Kutsche - Machine Learning Engineer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/general.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <h1>Simon Kutsche</h1>
-            <p>Machine Learning Engineer</p>
+    <header class="header">
+        <div class="header-right-section">
+            <div><a href="#home">HOME</a></div>
+            <div><a href="#experience">EXPERIENCE</a></div>
+            <div><a href="#education">EDUCATION</a></div>
+            <div><a href="#skills">SKILLS</a></div>
+            <div><a href="#resume">RESUME</a></div>
+            <div><a href="#contact">CONTACT</a></div>
         </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#experience">EXPERIENCE</a></li>
-            <li><a href="#education">EDUCATION</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#resume">RESUME</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-        </ul>
-    </nav>
+    
 
-    <section id="home">
-        <div class="container">
-            <h2>Home</h2>
-            <!-- Your home content goes here -->
+    <section id="home" class="home-section">
+        <div class="home-section-container">
+            <div class="home-text">
+                <p class="home-text-name">Simon Kutsche</p>
+                <p class="home-text-job">Machine Learning Engineer</p>
+            </div>
         </div>
     </section>
 
