experience section started

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
 
     <section id="home" class="home-section">
         <div class="home-section-container">
-            <div class="home-text">
+            <div class="home-text-container">
                 <p class="home-text-name">Simon Kutsche</p>
                 <p class="home-text-job">Machine Learning Engineer</p>
             </div>
         </div>
     </section>
 
-    <section id="experience">
-        <div class="container">
-            <h2>Experience</h2>
-            <!-- Your experience content goes here -->
+    <section id="experience" class="experience-section">
+        <div class="experience-section-container">
+            <div class="experience-text-container">
+                <p class="experience-text">Experience</p>
+            </div>
         </div>
     </section>
 
