experience section started

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <header class="header">
         <div class="header-right-section">
             <div><a href="#home">HOME</a></div>
+            <div><a href="#about">ABOUT</a></div>
             <div><a href="#experience">EXPERIENCE</a></div>
+            <div><a href="#projects">PROJECTS</a></div>
             <div><a href="#education">EDUCATION</a></div>
             <div><a href="#skills">SKILLS</a></div>
-            <div><a href="#resume">RESUME</a></div>
+            <div><a href="assets/resume.pdf" download="resume-simon-kutsche.pdf" target="_blank">RESUME</a></div>
             <div><a href="#contact">CONTACT</a></div>
         </div>
     </header>
@@ -37,11 +39,71 @@
         </div>
     </section>
 
+    <section id="about">
+        <div class="container">
+            <h2>About</h2>
+            <!-- Your about content goes here -->
+        </div>
+    </section>
+
     <section id="experience" class="experience-section">
         <div class="experience-section-container">
             <div class="experience-text-container">
                 <p class="experience-text">Experience</p>
             </div>
+
+            <div class="experience-item-container">
+                <a href="https://www.github.com/Simon1307">
+                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                </a>
+                <div class="experience-details">
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
+                        <p>Machine Learning Engineer at Robert Bosch GmbH</p>
+                    </a>
+                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
+                        Autoencoder for real-time anomaly detection in multivariate sensor data,
+                        contributing to increased availability and prevention of damage to expensive
+                        workpieces.</p>
+                </div>
+            </div>
+
+            <div class="experience-item-container">
+                <a href="https://www.github.com/Simon1307">
+                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                </a>
+                <div class="experience-details">
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
+                        <p>Machine Learning Engineer at Robert Bosch GmbH</p>
+                    </a>
+                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
+                        Autoencoder for real-time anomaly detection in multivariate sensor data,
+                        contributing to increased availability and prevention of damage to expensive
+                        workpieces.</p>
+                </div>
+            </div>
+
+            <div class="experience-item-container">
+                <a href="https://www.github.com/Simon1307">
+                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                </a>
+                <div class="experience-details">
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
+                        <p>Machine Learning Engineer at Robert Bosch GmbH</p>
+                    </a>
+                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
+                        Autoencoder for real-time anomaly detection in multivariate sensor data,
+                        contributing to increased availability and prevention of damage to expensive
+                        workpieces.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <!-- Your projects content goes here -->
         </div>
     </section>
 
@@ -56,13 +118,6 @@
         <div class="container">
             <h2>Skills</h2>
             <!-- Your skills content goes here -->
-        </div>
-    </section>
-
-    <section id="resume">
-        <div class="container">
-            <h2>Resume</h2>
-            <!-- Your resume content goes here -->
         </div>
     </section>
 
