exp and project section

--- a/index.html
+++ b/index.html
@@ -39,25 +39,45 @@
         </div>
     </section>
 
-    <section id="about">
-        <div class="container">
-            <h2>About</h2>
-            <!-- Your about content goes here -->
+    <section id="about" class="about-section">
+        <h2>Professional</h2>
+        <p>
+            Simon Kutsche is a Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
+        </p>
+        <p>
+            He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
+        </p>
+        <p>
+            In addition to his extensive professional endeavors, he is currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
+        </p>
+
+        <h3>Notable Achievements</h3>
+        <ul>
+            <li>Patented innovations in loss weighting strategies for neural networks</li>
+            <li>Real-time monitoring system for CNC machine tool data using deep learning</li>
+        </ul>
+
+
+        <h2>Personal</h2>
+        <p>
+            Simon has citizenship for the United States of America and Germany (dual citizenship). He was raised in Germany and is currently residing in Miami, FL, USA.
+        </p>
+            <p>Hobbies include programming, soccer, and backpacking.</p>
         </div>
     </section>
 
     <section id="experience" class="experience-section">
         <div class="experience-section-container">
             <div class="experience-text-container">
-                <p class="experience-text">Experience</p>
+                <p class="section-headline">Experience</p>
             </div>
 
             <div class="experience-item-container">
-                <a href="https://www.github.com/Simon1307">
+                <a href="https://www.github.com/Simon1307" target="_blank">
                     <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
                 </a>
                 <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307" target="_blank">
                         <p>Machine Learning Engineer at Robert Bosch GmbH</p>
                     </a>
                     <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
@@ -68,44 +88,89 @@
             </div>
 
             <div class="experience-item-container">
-                <a href="https://www.github.com/Simon1307">
-                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                <a href="https://www.github.com/Simon1307/MTL" target="_blank">
+                    <img class="experience-item-img" src="images/experience2_1.jpg" alt="Experience 2 Image">
                 </a>
                 <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
-                        <p>Machine Learning Engineer at Robert Bosch GmbH</p>
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307/MTL" target="_blank">
+                        <p>Deep Learning Engineer Intern at Bosch Center for Artificial Intelligence (BCAI)</p>
                     </a>
-                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
-                        Autoencoder for real-time anomaly detection in multivariate sensor data,
-                        contributing to increased availability and prevention of damage to expensive
-                        workpieces.</p>
+                    <p class="experience-details-description">Developed two novel loss weighting methods for Multi-task learning (MTL) that outperformed state-of-the-art methods. Incorporated novel methods into the existing code base of Bosch and Cariad (corporate partner) for automated driving. Compared loss balancing methods from the literature on tasks such as semantic segmentation, object detection, depth, and surface normal estimation on scene understanding datasets such as Cityscapes and NYUv2. Work led to the two novel loss weighting methods being registered as patents and two paper submissions to the well recognized scientific conference CVPR (2023 and 2024).
+                    </p>
                 </div>
             </div>
 
             <div class="experience-item-container">
-                <a href="https://www.github.com/Simon1307">
-                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                <a href="https://www.github.com/Simon1307" target="_blank">
+                    <img class="experience-item-img" src="images/experience3.jpg" alt="Experience 3 Image">
                 </a>
                 <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307">
-                        <p>Machine Learning Engineer at Robert Bosch GmbH</p>
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307" target="_blank">
+                        <p>Data Engineer at Scalefree International GmbH</p>
                     </a>
-                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
-                        Autoencoder for real-time anomaly detection in multivariate sensor data,
-                        contributing to increased availability and prevention of damage to expensive
-                        workpieces.</p>
+                    <p class="experience-details-description">Developed processes for loading the staging area and the raw data vault by
+                        employing AWS services such as S3, Lambda, and Batch. Led the internal BI development team as a Scrum Master.</p>
+                </div>
+            </div>
+
+            <div class="experience-item-container">
+                <a href="https://www.github.com/Simon1307/srp-project" target="_blank">
+                    <img class="experience-item-img" src="images/experience4.jpg" alt="Experience 4 Image">
+                </a>
+                <div class="experience-details">
+                    <a class="experience-details-a" href="https://www.github.com/Simon1307/srp-project" target="_blank">
+                        <p>Student Research Intern at University of Hildesheim</p>
+                    </a>
+                    <p class="experience-details-description">
+                        Conducted image-to-image translation between the domains of regular images and artworks with Deep Generative Adversarial Networks.
+                        Enhanced CycleGAN by introducing a two-objective discriminator as regularization, incorporating an adversarial self-defense for better cycle-consistency,
+                        and applying differentiable augmentation on the target domain with less data. Employed agile intercultural project management techniques to manage the
+                        project successfully.
+                    </p>
                 </div>
             </div>
 
         </div>
     </section>
 
-    <section id="projects">
-        <div class="container">
-            <h2>Projects</h2>
-            <!-- Your projects content goes here -->
+    <section id="projects" class="projects-section">
+        <div class="projects-section-container">
+            <div class="projects-text-container">
+                <p class="section-headline">Projects</p>
+            </div>
+
+            <div class="projects-item-container">
+                <a href="https://www.github.com/Simon1307/gan" target="_blank">
+                    <img class="projects-item-img" src="images/web_app_picture.jpg" alt="Project 1 Image">
+                </a>
+                <div class="projects-details">
+                    <a class="projects-details-a" href="https://www.github.com/Simon1307/gan" target="_blank">
+                        <p>Web App for Generating Art Pieces</p>
+                    </a>
+                    <p class="projects-details-description">
+                        Designed and developed a Flask-based web application to deploy a trained CycleGAN model on a Monet dataset
+                        enabling users to generate art pieces based on their input images.
+                    </p>
+                </div>
+            </div>
+
+            <div class="projects-item-container">
+                <a href="https://www.github.com/Simon1307/mlproject" target="_blank">
+                    <img class="projects-item-img" src="images/project2.jpg" alt="Project 2 Image">
+                </a>
+                <div class="projects-details">
+                    <a class="projects-details-a" href="https://www.github.com/Simon1307/mlproject" target="_blank">
+                        <p>End-to-End ML Framework with Continuous Delivery Pipeline</p>
+                    </a>
+                    <p class="projects-details-description">
+                        Implemented a comprehensive framework for developing, training, and deploying machine learning models.
+                        This end-to-end ML pipeline includes data ingestion, transformation, and model training as employed in industry settings.
+                        Deployable with a Flask-based web application for predictions in conjunction with AWS BEanstalk and AWS Codepipeline to obtain a continuous delivery pipeline.
+                    </p>
+                </div>
+            </div>
+
         </div>
-    </section>
 
     <section id="education">
         <div class="container">
@@ -121,12 +186,16 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="contact-section">
         <div class="container">
             <h2>Contact</h2>
             <!-- Your contact content goes here -->
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2023 Simon Kutsche - Machine Learning Engineer</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
