--- a/index.html
+++ b/index.html
@@ -39,30 +39,36 @@
         </div>
     </section>
 
-    <section id="about" class="about-section">
-        <h2>Professional</h2>
-        <p>
-            Simon Kutsche is a Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
-        </p>
-        <p>
-            He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
-        </p>
-        <p>
-            In addition to his extensive professional endeavors, he is currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
-        </p>
+    <section id="about">
+        <div class="about-section-container">
+            <div class="about-text-container">
+                <p class="section-headline">About</p>
+            </div>
+        <div class="about-section">
+            <h2>Professional</h2>
+            <p>
+                Simon Kutsche is a Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
+            </p>
+            <p>
+                He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
+            </p>
+            <p>
+                In addition to his extensive professional endeavors, he is currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
+            </p>
 
-        <h3>Notable Achievements</h3>
-        <ul>
-            <li>Patented innovations in loss weighting strategies for neural networks</li>
-            <li>Real-time monitoring system for CNC machine tool data using deep learning</li>
-        </ul>
+            <h3>Notable Achievements</h3>
+            <ul>
+                <li>Patented innovations in loss weighting strategies for neural networks</li>
+                <li>Real-time monitoring system for CNC machine tool data using deep learning</li>
+            </ul>
 
 
-        <h2>Personal</h2>
-        <p>
-            Simon has citizenship for the United States of America and Germany (dual citizenship). He was raised in Germany and is currently residing in Miami, FL, USA.
-        </p>
-            <p>Hobbies include programming, soccer, and backpacking.</p>
+            <h2>Personal</h2>
+            <p>
+                Simon has citizenship for the United States of America and Germany (dual citizenship). He was raised in Germany and is currently residing in Miami, FL, USA.
+            </p>
+                <p>Hobbies include programming, soccer, and backpacking.</p>
+            </div>
         </div>
     </section>
 
@@ -172,10 +178,29 @@
 
         </div>
 
-    <section id="education">
-        <div class="container">
-            <h2>Education</h2>
-            <!-- Your education content goes here -->
+    <section id="education-section">
+        <div class="education-section-container">
+            <div class="education-text-container">
+                <p class="section-headline">Education</p>
+            </div>
+        
+            <div class="education-item">
+                <img src="images/uni_hildesheim.png" alt="University 1 Logo">
+                <div class="education-details">
+                    <h3>International Master in Data Analytics (Master of Science)</h3>
+                    <p>University of Hildesheim</p>
+                    <p>2020-2023</p>
+                </div>
+            </div>
+
+            <div class="education-item">
+                <img src="images/uni_hannover.png" alt="University 2 Logo">
+                <div class="education-details">
+                    <h3>Business Information Systems (Bachelor of Science)</h3>
+                    <p>University of Applied Sciences and Arts Hannover</p>
+                    <p>2016-2023</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -197,7 +222,7 @@
         <p>&copy; 2023 Simon Kutsche - Machine Learning Engineer</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
