--- a/index.html
+++ b/index.html
@@ -212,17 +212,17 @@
     </section>
 
     <section id="contact" class="contact-section">
-        <div class="container">
+        <div class="contact-section-container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
+                    <h1 class="section-headline contact-headline">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> simon.kutsche@gmail.com</p>
-                    <p><i class="fa-solid fa-square-phone"></i> 017643831557</p>
+                    <p><i class="fa-solid fa-square-phone"></i>+1 (954) 802-9906</p>
                     <div class="social-icons">
                         <a href="https://www.github.com/Simon1307"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/simon-kutsche/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="assets/resume.pdf" class="btn btn2">Download Resume</a>
+                    <div class="download-resume-button"><a href="assets/resume.pdf" class="button">Download Resume</a></div>
                 </div>
 
                 <div class="contact-right">
@@ -230,7 +230,7 @@
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">Submit</button>
+                        <button type="submit" class="button">Submit</button>
                     </form>
                     <span id="msg"></span>
                 </div>
