--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="about-section">
             <h2>Professional</h2>
             <p>
-                Simon Kutsche is a Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
+                Simon Kutsche is an experienced Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
             </p>
             <p>
                 He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
@@ -204,10 +204,86 @@
         </div>
     </section>
 
-    <section id="skills">
-        <div class="container">
-            <h2>Skills</h2>
-            <!-- Your skills content goes here -->
+    <section id="skills" class="skills-section">
+        <div class="skills-section-container">
+            <div class="section-text-container">
+                <p class="section-headline"><a href="#skills">Skills</a></p>
+            </div>
+
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="images/skill1.jpg" alt="Skill 1 Image">
+                    <h3>Programming</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>C++</li>
+                        <li>Shell (Linux)</li>
+                    </ul>
+                </div>
+                
+                <div class="skill-item">
+                    <img src="images/skill2.jpg" alt="Skill 2 Image">
+                    <h3>Data Science Frameworks</h3>
+                    <ul>
+                        <li>PyTorch</li>
+                        <li>TensorFlow/Keras</li>
+                        <li>PySpark</li>
+                        <li>Flask</li>
+                        <li>Pandas</li>
+                        <li>Numpy</li>
+                        <li>Matplotlib</li>
+                    </ul>
+                </div>
+
+                <div class="skill-item">
+                    <img src="images/skill3.jpg" alt="Skill 3 Image">
+                    <h3>Distributed Computing</h3>
+                    <ul>
+                        <li>Hadoop/MapReduce</li>
+                        <li>Spark</li>
+                        <li>OpenMPI (mpi4py)</li>
+                        <li>Multi-threading</li>
+                    </ul>
+                </div>
+
+                <div class="skill-item">
+                    <img src="images/skill4.jpg" alt="Skill 4 Image">
+                    <h3>Development Tools</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Docker</li>
+                        <li>PyCharm</li>
+                        <li>MS Visual Studio Code</li>
+                        <li>Jupyter Notebook</li>
+                    </ul>
+                </div>
+
+                <div class="skill-item">
+                    <img src="images/skill5.jpg" alt="Skill 5 Image">
+                    <h3>Web Development</h3>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Vue.js</li>
+                    </ul>
+                </div>
+
+                <div class="skill-item">
+                    <img src="images/skill6.jpg" alt="Skill 6 Image">
+                    <h3>Cloud Services/Computing</h3>
+                    <ul>
+                        <li>AWS Elastic Beanstalk</li>
+                        <li>AWS Codepipeline</li>
+                        <li>AWS Lambda</li>
+                        <li>AWS Sagemaker</li>
+                        <li>MS Azure Databricks</li>
+                    </ul>
+                </div>
+
+            </div>
+
         </div>
     </section>
 
