--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Simon Kutsche - Machine Learning Engineer. Explore my professional experience, projects, education, and skills. Contact me for collaboration or inquiries.">
     <title>Simon Kutsche - Machine Learning Engineer</title>
     <link rel="stylesheet" href="styles/general.css">
 
